Add tso annotation

--- a/timestamp-storage/pom.xml
+++ b/timestamp-storage/pom.xml
@@ -142,6 +142,12 @@
             <artifactId>curator-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>5.1.0</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- end testing -->
 
