--- a/hbase-common/pom.xml
+++ b/hbase-common/pom.xml
@@ -92,6 +92,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.glassfish/javax.el -->
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>3.0.1-b06</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- end testing -->
 
     </dependencies>
